2004-12-14 Alain Magloire
	PR 80631 Patch form Przemek Tomaszewski
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutilinePage.java
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinerProvider.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/CSourceViewer.java
	* src/org/eclipse/cdt/internal/ui/editor/ICEdtiroActionDefinitionIds.java
	* src/org/eclipse/cdt/internal/ui/text/COutlineInformationControl.java
	* src/org/eclipse/cdt/internal/ui/text/CSourceViewerConfiguration.java
	* src/org/eclipse/cdt/internal/ui/util/ProblemTreeViewer.java
	* src/org/eclpse/cdt/ui/CElementContentProvider.java
	* plugin.properties.
	* plugin.xml

2004-12-12 Alain Magloire
	PR 80631 Patch form Przemek Tomaszewski 
	* src/org/eclipse/cdt/internal.ui/preferences/CEditorPreferencePage.java
	* src/org/eclipse/cdt/internal.ui/preferences/CEditorPreferencePage.properties
	* src/org/eclipse/cdt/internal/ui/text/CBraceRule.java
	* src/org/eclipse/cdt/internal/ui/text/CCodeScanner.java
	* src/org/eclipse/cdt/internal/ui/text/CppCodeScanner.java
	* src/org/eclipse/cdt/internal/ui/text/ICColorConstants.java
	* src/org/eclipse/cdt/internal/ui/text/NumberRule.java
	* src/org/eclipse/cdt/internal/ui/text/SingleCharRule.java

2004-12-10 Alain Magloire
	Fix for 77874.
	In order to fix this we removed all of the Eclipse-1.0 classes
	that we copied in the CDT.
	The good news is that it is now part of Eclipse-3.x platform and we no
	need to carry the duplicate.
	The templates support was rewritten to use the JFace templates support
	classes.

	* src/org/eclipse/cdt/internal/corext/template/*: remove to use
	JFace Templates support.
	* src/org/eclipse/cdt/internal/corext/template/c/*: rewritten to use
	JFace Templates classes.
	* src/org/eclipse/cdt/intenal/corext/texmanipulation/*: remove to use
	JFace TextEdit support